Upload Nicepage files

--- a/Our-Projects-1.html
+++ b/Our-Projects-1.html
@@ -28,7 +28,7 @@
     <meta property="og:title" content="Our Projects 1">
     <meta property="og:type" content="website">
   <meta data-intl-tel-input-cdn-path="intlTelInput/"></head>
-  <body data-home-page="https://website6270533.nicepage.io/Our-Projects-1.html?version=3cfdff0a-4a65-8401-939d-8ccc37ddbb9a" data-home-page-title="Our Projects 1" data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-08ae"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
+  <body data-path-to-root="/" data-include-products="false" class="u-body u-xl-mode" data-lang="es"><header class="u-clearfix u-header u-header" id="sec-08ae"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="#" class="u-image u-logo u-image-1">
           <img src="/images/default-logo.png" class="u-logo-image u-logo-image-1">
         </a>
